# broker_esp32s3

./: CMakeLists.txt  OPTIMIZATION_NOTES.md  README.md  devices_remote.js  devices_remote_v3.js  instruction_brocker.docx  old_editor.js  partitions.csv  sdkconfig  sdkconfig.old
.github/workflows/: ci.yml
components/audio_player/: CMakeLists.txt  audio_player.c  audio_player_decode.c  audio_player_internal.h  audio_player_output.c  audio_player_runtime.c  audio_player_status.c  audio_player_volume.c  helix_mp3_wrapper.c  helix_mp3_wrapper.h  helix_shim.c
components/audio_player/include/: audio_player.h
components/automation_engine/: CMakeLists.txt  automation_engine.c  automation_engine_context.c  automation_engine_execution.c  automation_engine_flags.c  automation_engine_internal.h  automation_engine_registry.c
components/automation_engine/include/: automation_engine.h
components/broker_config/: Kconfig.projbuild
components/config_store/: config_store.c
components/config_store/include/: config_store.h
components/device_manager/: CMakeLists.txt  device_manager.c  device_manager_export.c  device_manager_internal.h  device_manager_parse.c  device_manager_validate.c  dm_profiles.h  dm_storage.h  dm_template_applier.h  template_applier.c  template_factory.c  template_registry.c  template_runtime.c
components/device_manager/include/: device_manager.h  dm_limits.h  dm_profiles.h  dm_runtime_condition.h  dm_runtime_interval.h  dm_runtime_sensor.h  dm_runtime_sequence.h  dm_runtime_uid.h  dm_template_factory.h  dm_template_registry.h  dm_template_runtime.h  dm_templates.h
components/device_manager/profiles/: dm_profiles.c
components/device_manager/runtime/: dm_runtime_condition.c  dm_runtime_sensor.c  dm_runtime_sequence.c  dm_runtime_uid.c
components/device_manager/storage/: dm_storage.c
components/device_manager/templates/: dm_templates.c
components/device_manager/test/: CMakeLists.txt  test_device_manager_parse.c
components/device_model/: CMakeLists.txt  dm_templates.c  template_factory.c
components/device_model/include/: device_model.h  device_model_utils.h  dm_limits.h  dm_template_factory.h  dm_templates.h
components/device_runtime/: CMakeLists.txt  dm_runtime_condition.h  dm_runtime_flag.h  dm_runtime_interval.h  dm_runtime_mqtt.h  dm_runtime_sequence.h  dm_runtime_signal.h  dm_runtime_uid.h  runtime_service.c  template_runtime.c
components/device_runtime/include/: dm_runtime_service.h  dm_template_runtime.h
components/device_runtime/runtime/: dm_runtime_condition.c  dm_runtime_flag.c  dm_runtime_interval.c  dm_runtime_mqtt.c  dm_runtime_sequence.c  dm_runtime_signal.c  dm_runtime_uid.c
components/error_monitor/: CMakeLists.txt  error_monitor.c
components/error_monitor/include/: error_monitor.h
components/event_bus/: event_bus.c
components/event_bus/include/: event_bus.h
components/mqtt_core/: CMakeLists.txt  mqtt_core.c  mqtt_core_acl.c  mqtt_core_bridge.c  mqtt_core_internal.h  mqtt_core_packet.c  mqtt_core_protocol.c  mqtt_core_retain.c  mqtt_core_server.c  mqtt_core_session.c
components/mqtt_core/include/: mqtt_core.h
components/mqtt_core/test/: test_mqtt_core.c
components/network/: CMakeLists.txt  idf_component.yml  network.c
components/network/include/: network.h
components/ota_manager/: CMakeLists.txt  ota_manager.c
components/ota_manager/include/: ota_manager.h
components/sd_storage/: CMakeLists.txt  sd_storage.c
components/sd_storage/include/: sd_storage.h
components/service_status/: CMakeLists.txt  service_status.c
components/service_status/include/: service_status.h
components/status_led/: CMakeLists.txt  status_led.c
components/status_led/include/: status_led.h
components/web_ui/: CMakeLists.txt  web_ui.c  web_ui_auth.c  web_ui_auth.h  web_ui_devices.c  web_ui_devices_api.c  web_ui_handlers.h  web_ui_laser.c  web_ui_media.c  web_ui_ota.c  web_ui_page.c  web_ui_page.h  web_ui_pictures.c  web_ui_robot.c  web_ui_status.c  web_ui_system.c  web_ui_utils.c  web_ui_utils.h
components/web_ui/assets/: build_devices_wizard.py  devices_editor.js  devices_wizard.css  devices_wizard.js  readme.md
components/web_ui/assets/wizard/: wizard_01_prelude.js  wizard_02_state.js  wizard_03_render.js  wizard_04_helpers.js  wizard_05_mutations.js  wizard_06_wizard.js  wizard_07_footer.js
components/web_ui/include/: web_ui.h  web_ui_devices.h  web_ui_laser.h  web_ui_page.h  web_ui_pictures.h  web_ui_robot.h  web_ui_utils.h
docs/: ARCHITECTURE.md  SCENARIO_SETUP.md  SCENARIO_SETUP_RUS.md  TEMPLATE_GUIDE.md  TEMPLATE_GUIDE_RUS.md  TESTING.md
main/: CMakeLists.txt  main.c
tests/device_manager/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
tests/device_manager/main/: CMakeLists.txt  test_device_manager_integration.c  test_device_manager_parse.c  test_dm_helpers.h  test_runner.c  test_runtime_pure.c
tests/mqtt_core/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
tests/mqtt_core/main/: CMakeLists.txt  test_runner.c
tests/stress_chaos_tests/: mqtt_protocol_semantics_test.py  mqtt_stress_test.py  readme.md
tests/template_runtime_integration/: CMakeLists.txt  sdkconfig
tests/template_runtime_integration/main/: CMakeLists.txt  test_runner.c  test_template_helpers.h  test_template_runtime_integration.c
